--- a/.github/workflows/gitbook_action.yml
+++ b/.github/workflows/gitbook_action.yml
@@ -34,8 +34,8 @@ jobs:
         uses: zanderzhao/gitbook-action@v1.2.4
         with:
           # specify either github_token or personal_token
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          # personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # token: ${{ secrets.PERSONAL_TOKEN }}
           gitbook_pdf: true
           gitbook_pdf_name: ${{ github.event.repository.name }}
           gitbook_pdf_dir: 'exports'
